<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tennis_stadium"
    tools:context="com.example.android.tennisscorekeeper.MainActivity">

    <LinearLayout
        android:id="@+id/full_upper_counters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/left_full_counters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/left_point_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/doubleZeros"
                android:textColor="@android:color/white"
                android:textSize="50sp"/>
            <TextView
                android:id="@+id/left_games_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@id/left_point_count"
                android:layout_toStartOf="@id/left_point_count"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/left_sets_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/left_games_count"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@id/left_point_count"
                android:layout_toStartOf="@id/left_point_count"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>
            <View
                android:id="@+id/left_separator"
                android:layout_width="1dp"
                android:layout_height="54dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@id/left_games_count"
                android:layout_toStartOf="@id/left_games_count"
                android:textColor="@android:color/white">
            </View>
            <TextView
                android:id="@+id/left_games_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_toLeftOf="@id/left_separator"
                android:layout_toStartOf="@+id/left_separator"
                android:text="@string/games"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/left_games_title"
                android:layout_marginTop="3dp"
                android:layout_toLeftOf="@id/left_separator"
                android:layout_toStartOf="@+id/left_separator"
                android:text="@string/sets"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="22sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/right_full_counters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/right_point_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/doubleZeros"
                android:textColor="@android:color/white"
                android:textSize="50sp"/>
            <TextView
                android:id="@+id/right_games_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/right_point_count"
                android:layout_toRightOf="@id/right_point_count"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/right_sets_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/right_games_count"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/right_point_count"
                android:layout_toRightOf="@id/right_point_count"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>
            <View
                android:id="@+id/right_separator"
                android:layout_width="1dp"
                android:layout_height="54dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_toEndOf="@id/right_games_count"
                android:layout_toRightOf="@id/right_games_count"
                android:textColor="@android:color/white">
            </View>
            <TextView
                android:id="@+id/right_games_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@+id/right_separator"
                android:layout_toRightOf="@id/right_separator"
                android:text="@string/games"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/right_games_title"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/right_separator"
                android:layout_toRightOf="@id/right_separator"
                android:text="@string/sets"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="22sp"/>
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/startAndReset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/default_button_design"
        android:text="@string/start"
        android:textColor="@color/white"/>
    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_upper_counters"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/player1_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/player1_score_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/default_button_design"
                android:text="@string/score_up"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/player1_fault_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/default_button_design"
                android:text="@string/fault"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:text="@string/number_of_sets"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/radioButton_3_sets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/set_3"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
                <RadioButton
                    android:id="@+id/radioButton_5_sets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_5"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/player2_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/player2_score_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/default_button_design"
                android:text="@string/score_up"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/player2_fault_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/default_button_design"
                android:text="@string/fault"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>